# burn-scar-ssl

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml  phase2_sweep.yaml  phase3_ssl.yaml  phase4_peft.yaml  phase5_deploy.yaml
scripts/: download_data.py  download_phase4_results.sh  eval.sh  generate_figures.py  generate_subsets.py  plot_efficiency_curves.py  run_demo.py  run_phase2.sh  run_phase2_sweep.py  run_phase3.py  run_phase3_experiments.sh  run_phase4_peft.py  run_phase4_sweep.sh  run_phase5_deploy.py  run_phase5_sweep.sh  setup.sh  train.sh  train_baseline.py
src/: __init__.py
src/data/: __init__.py  dataset.py  ssl_datamodule.py  subset_generator.py  transforms.py
src/demo/: __init__.py  app.py  inference.py
src/demo/static/: index.html
src/deployment/: __init__.py  export.py
src/models/: __init__.py  backbone_registry.py  dinov3_backbone.py  prithvi.py  resnet_backbone.py  segmentation.py
src/training/: __init__.py  metrics.py  ssl_task.py  trainer.py
src/utils/: __init__.py  config.py
tests/: test_backbones.py  test_dataset.py  test_demo.py  test_export.py  test_model.py  test_peft_model.py  test_ssl_datamodule.py  test_ssl_task.py  test_subset_generator.py  test_training.py
