[project]
name = "burn-scar-ssl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "gdown>=5.2.1",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "pillow>=12.1.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "scipy>=1.17.0",
    "terratorch>=1.2.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
    "wandb>=0.24.1",
    "weave>=0.52.26",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
addopts = "-v"
